Se arregló problemas de margenes con el grid de los gráficos. Se aprovechó mejor los espacios vacíos en la pantalla de resultados. Se arregló bug con el punto del usuario en la visualización PCA (ahora es visible).

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -460,7 +460,7 @@ body {
 .charts-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
-  gap: 30px;
+  gap: 0 30px;
   margin: 30px 0;
 }
 
